[tool.poetry]
name = "diceStudy"
version = "0.1.0"
description = "A small analisys of dice probability"
authors = ["Artic42 <main@artic42.com>"]
license = "MIT license"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
articlib = "^0.2.4"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
flake8 = "^7.1.1"
mypy = "^1.11.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [".venv", ".git", "__pycache__"]
max-line-length = 100